// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly encodes Functions 1`] = `
Array [
  [Function],
]
`;

exports[`correctly encodes a HTMLElement 1`] = `
Array [
  <html>
    <head>
      <style
        data-emotion=""
        type="text/css"
      />
    </head>
    <body />
  </html>,
]
`;

exports[`correctly encodes nested values 1`] = `
Array [
  Object {
    "document": <html>
      <head>
        <style
          data-emotion=""
          type="text/css"
        />
      </head>
      <body />
    </html>,
    "function": [Function],
    "nested": Array [
      Array [
        Array [
          Object {
            "constructor": Object {
              "name": "Promise",
            },
          },
        ],
      ],
    ],
    "recursive": [Circular],
  },
]
`;

exports[`decodes messages 1`] = `
Array [
  "test",
]
`;
